--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,10 +8,23 @@ header {
   margin: 50px 140px 0;
   font-family: "Merriweather", serif;
   color: white;
-  
 }
+main {
+  width: 80%;
+  margin: 0 auto;
+}
+
+main section {
+  margin-top: 120px;
+}
+
 .banar {
-    background: linear-gradient(180deg, rgb(0, 0, 0) 2.0%,rgba(29, 14, 58, 0.2) 80%),url("../assets/images/Banner\ Image.png");
+  background: linear-gradient(
+      180deg,
+      rgb(0, 0, 0) 2%,
+      rgba(29, 14, 58, 0.2) 80%
+    ),
+    url("../assets/images/Banner\ Image.png");
   /* background-image: url("../assets/images/Banner\ Image.png"); */
   background-repeat: no-repeat;
   background-size: cover;
@@ -21,12 +34,91 @@ header {
   text-align: center;
   /* margin: 200px auto 0px; */
   padding-top: 150px;
-  
 }
-.banar p{
-    font-size: 25px;
+.banar p {
+  font-size: 25px;
 }
-.banar h1{
-    font-size: 56px;
-    padding: 0 200px;
+.banar h1 {
+  font-size: 56px;
+  padding: 0 200px;
+}
+
+.discount-sec {
+  /* background-color: aqua; */
+  margin-bottom: 120px;
+  font-family: "Inter", serif;
+}
+
+.discount-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+}
+
+.discount-container h2 {
+  font-size: 58px;
+  font-weight: 700;
+  color: #ff0000;
+}
+.discount-extra-text {
+  text-align: center;
+}
+.discount-extra-text p {
+  color: #ff0000;
+}
+.discount-extra-text h3 {
+  font-weight: 700;
+}
+
+.discount-container img {
+  width: 60%;
+}
+
+/* Midnight Party */
+.midnight-party {
+  width: 100%;
+  height: 500px;
+  background: linear-gradient(
+      90deg,
+      rgb(0, 0, 0) 2%,
+      rgba(29, 14, 58, 0.2) 80%
+    ),
+    url("../assets/images/Group\ 70.png"), 
+    url("../assets/images/Vectorrr.png");
+  /* background-image: url("../assets/images/Group\ 70.png"),
+    url("../assets/images/Vectorrr.png"); */
+  background-repeat: no-repeat;
+  background-position: center center,85% 45%, right center;
+  background-size: cover, 220px 350px, cover;
+  margin-bottom: 100px;
+  padding: 70px 120px;
+  border-radius: 12px;
+}
+.party-container {
+    
+    color: white;
+    font-family: "Merriweather", serif;
+}
+.welcome-msg{
+    font-size: 64px;
+    font-weight: 600;
+}
+.welcome-msg span{
+    display: block;
+}
+.party-desc{
+    font-size: 14px;
+    color: rgb(168, 165, 162);
+    padding: 20px 150px 20px 0;
+}
+
+.join-btn{
+    margin-left: 18px;
+}
+.join-btn button{
+    background: transparent;
+    color: white;
+    border: none;
 }
