best offer added

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,3 +122,24 @@ main section {
     color: white;
     border: none;
 }
+
+/* Best Offer */
+.offer-container{
+    display: flex;
+    gap: 12px;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.offer-item{
+    flex-basis: 30%;
+}
+
+.offer-img{
+    padding: 30px;
+    border: 20px solid red;
+    border-radius: 50%;
+}
+.offer-img img{
+    /* border: 10px solid red; */
+}
